--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -11,3 +11,6 @@ log = "0.4"
 spin = "0.6"
 buddy_system_allocator = "0.5.0"
 bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", rev = "03bd9909" }
+
+[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
+riscv = { git = "https://github.com/rcore-os/riscv", rev = "21e32ee" }
