--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -14,6 +14,7 @@ buddy_system_allocator = "0.5"
 bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", rev = "03bd9909" }
 lazy_static = { version = "1.4", features = ["spin_no_std"] }
 trapframe = "0.6"
+executor = { git = "https://github.com/rcore-os/executor.git", rev = "a2d02ee9" }
 
 [target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
 riscv = { git = "https://github.com/rcore-os/riscv", rev = "21e32ee" }
