add simple test: read after write. fix a bug in asynccall/structs.rs

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -2,7 +2,7 @@ ARCH ?= riscv64
 MODE ?= debug
 SMP ?= 2
 LOG ?=
-USER_ELF ?= ../user/build/$(ARCH)/test
+USER_ELF ?= ../user/build/$(ARCH)/read_after_write
 
 export ARCH
 
